@@ -57,8 +57,7 @@ public final class ValueChanges {
      * @param initialization true if the value was being initialized, as in, no previous value exists
      */
     private DefaultValueChange(final K key, final V newValue, final V oldValue, final boolean initialization) {
-      Objects.requireNonNull(key, "key");
-      this.key = key;
+      this.key = Objects.requireNonNull(key, "key");
       this.newValue = newValue;
       this.oldValue = oldValue;
       this.initialization = initialization;
