@@ -4297,3 +4297,4 @@
   EntityConnectionServer removed, functionality moved to org.jminor.common.server.Server
   HostMonitor, hardcoded admin user removed
   Server monitor, removed framework-db-remote module from dependencies due to the above
+  org.jminor.common, inlined a few Objects.requireNonNull() calls
